# shader

./: celestial.frag  test-shader.frag  test-shader.vert
gradient-line/: .gitignore  CMakeLists.txt  main.c  run.sh  shader.frag  watch-shaders.sh
